test/descriptor/seman/poly_corr16.v3
//@seman = DescriptorError @ 16:36
// DA
// | \
// DB  DC
class DA<T> describes A<T> { }
class DB<T> extends DA<T> describes B<T> { }
class DC<T> extends DA<T> describes C<T> { }  // DC is a sibling of DB, not a subtype

// A
// |
// B
// |
// C
class A<T> descriptor DA<T> { }
class B<T> extends A<T> descriptor DB<T> { }
class C<T> extends B<T> descriptor DC<T> { }  // error: DC<T> must be a subtype of DB<T>
